Use immutable types